loom pom files